# django-access-inspector

./: .gitignore  MANIFEST.in  Makefile  README.md  manage.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: ci.yml
demo_views/: apps.py  django_native_views.py  urls.py  views.py
django_access_control/: __init__.py  apps.py  settings.py
django_access_control/management/commands/: scan_access_control.py
django_access_control/tests/management/command/: test_scan_access_control.py
django_access_control/tests/mocks/: views.py
django_access_inspector/: __init__.py  apps.py  mcp_server.py  settings.py
django_access_inspector/management/commands/: inspect_access_control.py  start_mcp_server.py
django_access_inspector/services/: __init__.py  debug_logger.py  models.py  report_generator.py  snapshot.py  url_analyzer.py  view_inspector.py
django_access_inspector/tests/: test_ci_integration.py  test_command_ci_mode.py  test_models.py  test_report_generator_ci.py  test_report_generator_service.py  test_snapshot_service.py  test_url_analyzer_service.py  test_view_inspector_service.py
django_access_inspector/tests/management/command/: test_scan_access_control.py
django_access_inspector/tests/management/commands/: snapshot.json  test_inspect_access_control.py
django_access_inspector/tests/mocks/: permissions.py  views.py
docs/skills/django-access-audit/: SKILL.md
