[tool.poetry]
name = "django-access-inspector"
version = "0.2.0"
license='MIT License'
repository="https://github.com/BastienTeissier/django-access-inspector"
description='A tool to analyze your Django app access control'
authors = ["Bastien Teissier <bastient@theodo.fr>"]
readme = "README.md"
packages = [{include = "django_access_inspector"}]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.5"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.265"
pytest = "^7.3.1"
django = "^4.2.1"
pytest-django = "^4.5.2"
djangorestframework = "^3.14.0"
build = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
