[project]
name = "django-access-inspector"
version = "0.2.1"
description = "A tool to analyze your Django app access control"
authors = [{ name = "Bastien Teissier", email = "bastient@theodo.fr" }]
requires-python = "~=3.10"
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
    "rich>=13.3.5,<14",
    "twine>=5.1.1,<6",
]

[project.urls]
Repository = "https://github.com/BastienTeissier/django-access-inspector"

[dependency-groups]
dev = [
    "black>=23.3.0,<24",
    "ruff>=0.0.265,<0.0.266",
    "pytest>=7.3.1,<8",
    "django>=4.2.1,<5",
    "pytest-django>=4.5.2,<5",
    "djangorestframework>=3.14.0,<4",
    "build>=0.10.0,<0.11",
]

[tool.hatch.build.targets.sdist]
include = ["django_access_inspector"]

[tool.hatch.build.targets.wheel]
include = ["django_access_inspector"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
