[metadata]
name = django_access_control
version = 0.1
description = A Django app to check access control on your views
long_description = file: README.md
url = https://github.com/theodo
author = Bastien Teissier
author_email = bastient@theodo.fr
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.1